infoscreen: Fix destination overflow

--- a/public/infoscreen.css
+++ b/public/infoscreen.css
@@ -83,6 +83,7 @@ div.displayclean li .dest {
 	position:absolute;
 	top:0.65em;
 	left:2.5em;
+	bottom:-0.1em;
 	width: 70%;
 	z-index: 1;
 	overflow: hidden;
